# apitally-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: .env.example
examples/axum-example/: Cargo.toml
examples/axum-example/src/: main.rs
src/: client.rs  layer.rs  lib.rs
