[package]
name = "apitally"
version = "0.1.0"
edition = "2021"
description = "Apitally middleware"
license = "MIT"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/chris-windsor/apitally-rs"

[dependencies]
axum = "0.7.9"
futures-util = "0.3.31"
reqwest = { version = "0.12.10", features = ["json"] }
serde_json = "1.0.134"
tokio = { version = "1.42.0", features = ["full"] }
tower = "0.5.2"
uuid = { version = "1.11.0", features = ["serde", "v4"] }
serde = { version = "1.0.216", features = ["derive"] }
